header_v2_and_footer_v1

--- a/FSD_Education_site/Ui-kit/Header1.html
+++ b/FSD_Education_site/Ui-kit/Header1.html
@@ -14,13 +14,13 @@
 
   <img src="img/Logo.svg" alt="" class="logo">
 <nav class="main-menu">
-  <a href="" class="main-menu_items">Home</a>
-  <a href="" class="main-menu_items">About as</a>
-  <a href="" class="main-menu_items">Services
+  <a href="" class="main-menu_item">Home</a>
+  <a href="" class="main-menu_item">About as</a>
+  <a href="" class="main-menu_item">Services
   <img src="img/expand_more.svg" alt="" class="main-menu_items__expand-more"></a>
-  <a href="" class="main-menu_items">Careers</a>
-  <a href="" class="main-menu_items">News</a>
-  <a href="" class="main-menu_items">Documentation</a>
+  <a href="" class="main-menu_item">Careers</a>
+  <a href="" class="main-menu_item">News</a>
+  <a href="" class="main-menu_item">Documentation</a>
 </nav>
 
 <div class="Buttons">
