--- a/FSD_Education_site/Ui-kit/Footer.html
+++ b/FSD_Education_site/Ui-kit/Footer.html
@@ -53,5 +53,15 @@ promotions in your inbox!</span>
     </div>
   </footer>
 
+  <div class="footer2-container">
+    <a href="" class="footer2-container__logo"><img src="img/Logo.svg" alt=""></a>
+    <span class="footer2-container__text-description">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam <br> pellentesque aliquam curabitur cociis.</span>
+    <div class="footer-section__social-link">
+      <a href="" class="footer-section__item"><img src="img/twitter-icon.svg" alt="twitter"></a>
+      <a href="" class="footer-section__item"><img src="img/facebook-icon.svg" alt="facebook"></a>
+      <a href="" class="footer-section__item"><img src="img/instagram-icon.svg" alt="instagram"></a>
+    </div>
+  </div>
+
   </body>
 </html>
