--- a/FSD_Education_site/Ui-kit/Header1.html
+++ b/FSD_Education_site/Ui-kit/Header1.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/Heade&Footer.css">
+    <link rel="stylesheet" href="css/Header1.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title></title>
